--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -1,4 +1,6 @@
 find_package(imgui CONFIG REQUIRED)
+#find_package(glfw3 CONFIG REQUIRED)
+find_package(imgui CONFIG REQUIRED)
 
 add_executable(viewer main.cpp NanoViewer.cpp)
 target_compile_features(viewer PUBLIC cxx_std_20)
@@ -6,4 +8,6 @@ target_link_libraries(viewer
   PRIVATE
 	owl_viewer
 	owl::owl
+	glfw
+	imgui::imgui
 )
