Replace test semaphores with vkSemaphores
Proper synchronization between OpenGL and CUDA should run over vkSemaphore object. Implementation requires extensions for semaphore sharing on Vulkan side and for external object acquisition from GL side.

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -2,6 +2,8 @@ find_package(imgui CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glad CONFIG REQUIRED)
+find_package(Vulkan REQUIRED)
+find_package(VulkanHeaders CONFIG)
 
 add_executable(viewer main.cpp NanoViewer.cpp)
 target_compile_features(viewer PUBLIC cxx_std_20)
@@ -15,4 +17,6 @@ target_link_libraries(viewer
 	b3d::lib
 	OpenGL::GL
 	glad::glad
+	Vulkan::Vulkan
+	Vulkan::Headers
 )
