Renaming Cmake Targets

--- a/unityCUDAInterop/CMakeLists.txt
+++ b/unityCUDAInterop/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_subdirectory(actionRuntime)
+
+add_subdirectory(actionInterface)
+add_subdirectory(logger)
+add_subdirectory(runtime)
+add_subdirectory(pluginAPI)
+
 add_subdirectory(actions)
