Change CMake Target names

--- a/renderer/lib/CMakeLists.txt
+++ b/renderer/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(module_name "lib")
+set(module_name "B3DRendererLibrary")
 set(src Logging.cpp RendererBase.cpp)
 set(shared_headers Logging.h RendererBase.h)
 
@@ -9,4 +9,4 @@ target_link_libraries(${module_name}
   PUBLIC
 	owl::owl
 )
-add_library(b3d::lib ALIAS ${module_name})
+add_library(B3D::Renderer::Library ALIAS ${module_name})
