--- a/renderer/fastVoxelTraversal/CMakeLists.txt
+++ b/renderer/fastVoxelTraversal/CMakeLists.txt
@@ -7,3 +7,6 @@ target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${MODULE_NAME} PRIVATE B3D::Renderer::Library)
 add_library(B3D::Renderer::FastVoxelTraversal ALIAS ${MODULE_NAME})
+
+
+set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Renderer")
