--- a/renderer/lib/CMakeLists.txt
+++ b/renderer/lib/CMakeLists.txt
@@ -1,12 +1,14 @@
-set(module_name "B3DRendererLibrary")
-set(src Logging.cpp RendererBase.cpp)
-set(shared_headers Logging.h RendererBase.h)
+set(MODULE_NAME "B3DRendererLibrary")
+set(SRC Logging.cpp RendererBase.cpp)
+set(SHARED_HEADERS Logging.h RendererBase.h)
 
-add_library(${module_name} ${src} ${shared_headers})
-target_include_directories(${module_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_features(${module_name} PUBLIC cxx_std_20)
-target_link_libraries(${module_name}
+add_library(${MODULE_NAME} ${SRC} ${SHARED_HEADERS})
+target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_compile_features(${MODULE_NAME} PUBLIC cxx_std_20)
+target_link_libraries(${MODULE_NAME}
   PUBLIC
 	owl::owl
 )
-add_library(B3D::Renderer::Library ALIAS ${module_name})
+add_library(B3D::Renderer::Library ALIAS ${MODULE_NAME})
+
+set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Renderer")
