--- a/renderer/null/CMakeLists.txt
+++ b/renderer/null/CMakeLists.txt
@@ -1,9 +1,11 @@
 
-set(module_name "B3DRendererNull")
-set(src NullRenderer.cpp)
+set(MODULE_NAME "B3DRendererNull")
+set(SRC NullRenderer.cpp)
 
-add_library(${module_name} ${src})
-target_compile_features(${module_name} PUBLIC cxx_std_20)
-target_include_directories(${module_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(${module_name} PRIVATE B3D::Renderer::Library)
-add_library(B3D::Renderer::Null ALIAS ${module_name})
+add_library(${MODULE_NAME} ${SRC})
+target_compile_features(${MODULE_NAME} PUBLIC cxx_std_20)
+target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${MODULE_NAME} PRIVATE B3D::Renderer::Library)
+add_library(B3D::Renderer::Null ALIAS ${MODULE_NAME})
+
+set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Renderer")
