--- a/unityCUDAInterop/actions/actionTest/CMakeLists.txt
+++ b/unityCUDAInterop/actions/actionTest/CMakeLists.txt
@@ -1,12 +1,15 @@
-add_library(ActionTest SHARED
+set(MODULE_NAME "ActionTest")
+add_library(${MODULE_NAME} SHARED
 	"src/ActionTest.cpp"
 )
 
-target_link_libraries(ActionTest
+target_link_libraries(${MODULE_NAME}
 	PRIVATE
 		B3D::UnityCUDAInterop::ActionInterface
 )
 
-set_target_properties(ActionTest PROPERTIES CXX_STANDARD 20)
+set_target_properties(${MODULE_NAME} PROPERTIES CXX_STANDARD 20)
 
-# install(TARGETS ActionTest DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSETS_SUBDIRECTORY_ACTIONS}/ActionTest)
+set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "UnityCudaInterop/Actions")
+
+# install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSETS_SUBDIRECTORY_ACTIONS}/${MODULE_NAME})
