Fix Vulkan loader error

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(glad CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(VulkanHeaders CONFIG)
 
-add_executable(viewer main.cpp NanoViewer.cpp)
+add_executable(viewer main.cpp NanoViewer.cpp Vulkan.h Vulkan.cpp)
 target_compile_features(viewer PUBLIC cxx_std_20)
 target_link_libraries(viewer
   PRIVATE
