--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(lib)
 add_subdirectory(null)
-add_subdirectory(fastVoxelTraversal)
+# add_subdirectory(fastVoxelTraversal)
+add_subdirectory(cudaSurfaceObjectWriteTest)
