--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(lib)
 add_subdirectory(null)
 # add_subdirectory(fastVoxelTraversal)
 add_subdirectory(cudaSurfaceObjectWriteTest)
+add_subdirectory(nano)
