Add simpleTriangles renderer

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(null)
 # add_subdirectory(fastVoxelTraversal)
 add_subdirectory(cudaSurfaceObjectWriteTest)
 add_subdirectory(nano)
+add_subdirectory(samples)
+add_subdirectory(simpleTriangles)
