Integrate new passes into viewer and major refactor on viewer

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -5,7 +5,26 @@ find_package(glad CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(VulkanHeaders CONFIG)
 
-add_executable(viewer main.cpp NanoViewer.cpp Vulkan.h Vulkan.cpp Viewer.h Viewer.cpp App.h App.cpp)
+add_executable(viewer)
+target_sources(viewer PRIVATE
+	main.cpp
+	NanoViewer.cpp
+	Vulkan.h
+	Vulkan.cpp
+	App.h
+	App.cpp
+	Pass.h
+	GLUtils.h
+	passes/FullscreenTexturePass.h
+	passes/FullscreenTexturePass.cpp
+	passes/InfinitGridPass.h
+	passes/InfinitGridPass.cpp
+	passes/DebugDrawPass.h
+	passes/DebugDrawPass.cpp
+	DebugDrawList.h
+	DebugDrawList.cpp
+	DebugDrawVertex.h
+)
 target_compile_features(viewer PUBLIC cxx_std_20)
 target_link_libraries(viewer
   PRIVATE
