UnityCudaInterop without runtime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ function(add_b3d_renderer)
 	add_library(${MODULE_NAME} STATIC ${SRC} ${HEADERS})
 	target_compile_features(${MODULE_NAME} PUBLIC cxx_std_20)
 	if(MSVC)
-		target_compile_options(${MODULE_NAME} PUBLIC /Zc:__cplusplus)
+		set(MSVC_CXX_COMPILER_FLAGS "/Zc:__cplusplus")
+		target_compile_options(${MODULE_NAME} PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
 	endif()
 	target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
