--- a/unityCUDAInterop/actionInterface/CMakeLists.txt
+++ b/unityCUDAInterop/actionInterface/CMakeLists.txt
@@ -1,15 +1,17 @@
-add_library(UnityCUDAInteropActionInterface INTERFACE)
+set(MODULE_NAME UnityCUDAInteropActionInterface)
 
-target_link_libraries(UnityCUDAInteropActionInterface
-	INTERFACE
-		B3D::UnityCUDAInterop::PluginAPI
-		B3D::UnityCUDAInterop::Runtime
-		B3D::UnityCUDAInterop::Logger
-)
+add_library(${MODULE_NAME} INTERFACE)
 
-target_include_directories(UnityCUDAInteropActionInterface
+target_include_directories(${MODULE_NAME}
 	INTERFACE
 		"include"
-)	
+)
 
-add_library(B3D::UnityCUDAInterop::ActionInterface ALIAS UnityCUDAInteropActionInterface)
+target_link_libraries(${MODULE_NAME}
+	INTERFACE
+		B3D::UnityCUDAInterop::Helper
+)
+
+set_target_properties(${MODULE_NAME} PROPERTIES CXX_STANDARD 20)
+
+add_library(B3D::UnityCUDAInterop::ActionInterface ALIAS ${MODULE_NAME})
