--- a/unityCUDAInterop/actions/CmakeLists.txt
+++ b/unityCUDAInterop/actions/CmakeLists.txt
@@ -1,2 +1,3 @@
-add_subdirectory(actionTest)
+add_subdirectory(actionConcrete)
+#add_subdirectory(actionTest)
 add_subdirectory(actionSyncPrimitiveSample)
