--- a/unityCUDAInterop/actions/CmakeLists.txt
+++ b/unityCUDAInterop/actions/CmakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(actionConcrete)
 #add_subdirectory(actionTest)
 add_subdirectory(actionSyncPrimitiveSample)
+add_subdirectory(actionSimpleTriangles)
