- ignore log.txt from unity editor - Cleanup vs code settings

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ out/**
 CMakeUserPresets.json
 Folder.DotSettings
 Folder.DotSettings.user
+
+unityCUDAInterop/UnityPlayground/log.txt
+unityCUDAInterop/UnityPlayground/.vscode/**
