--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(lib)
 add_subdirectory(null)
-# add_subdirectory(fastVoxelTraversal)
+ add_subdirectory(fastVoxelTraversal)
 add_subdirectory(cudaSurfaceObjectWriteTest)
 add_subdirectory(nano)
 add_subdirectory(samples)
