--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -40,6 +40,7 @@ target_link_libraries(viewer
 	B3D::Renderer::CudaSurfaceObjectWriteTest
 	B3D::Renderer::SimpleTriangles
 	B3D::Renderer::Nano
+	B3D::Renderer::FastVoxelTraversal
 	OpenGL::GL
 	glad::glad
 	Vulkan::Vulkan
