--- a/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
+++ b/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
@@ -4,7 +4,14 @@ find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(OpenVDB CONFIG REQUIRED COMPONENTS openvdb nanovdb)
 
 add_executable(NanoCutter)
-target_sources(NanoCutter PRIVATE main.cpp NanoCutterApi.h)
+target_sources(NanoCutter PRIVATE
+	main.cpp
+	NanoCutterApi.h
+	MaskHelper.h
+	Common.h
+	MaskHelper.cpp
+)
+
 target_link_libraries(NanoCutter PRIVATE cfitsio Boost::program_options OpenVDB::openvdb OpenVDB::nanovdb NanoCutterParser)
 target_compile_features(NanoCutter PUBLIC cxx_std_20)
 if(MSVC)
