Add filter apply on extracted data. Add .b3d project file generation out of Fits file

--- a/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
+++ b/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(NanoCutter PRIVATE
 	FitsHelper.h
 	Common.h
 	FitsHelper.cpp
+	NanoGenerator.cpp
 )
 
 target_link_libraries(NanoCutter PRIVATE cfitsio Boost::program_options OpenVDB::openvdb OpenVDB::nanovdb NanoCutterParser)
