Add useful owl extensions

--- a/renderer/lib/CMakeLists.txt
+++ b/renderer/lib/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SHARED_HEADERS
 	NullDebugDrawList.h
 	NullGizmoHelper.h
 	CudaGpuTimers.h
+	OwlExtensions.h
 )
 
 add_library(${MODULE_NAME} ${SRC} ${SHARED_HEADERS})
