Update owl and trying to switch to OptixIR

--- a/renderer/nano/CMakeLists.txt
+++ b/renderer/nano/CMakeLists.txt
@@ -8,6 +8,20 @@ embed_ptx(
 	#DEVICE_DEBUG
 )
 
+embed_optixir(
+	OUTPUT_TARGET
+		nano-optixir
+	OPTIXIR_LINK_LIBRARIES
+		owl::owl
+	SOURCES
+		NanoRenderer.cu
+	#DEVICE_DEBUG
+)
+
+set_source_files_properties(NanoRenderer.cu
+  PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ
+  )
+
 find_package(OpenVDB CONFIG REQUIRED COMPONENTS nanovdb)
 find_package(imgui CONFIG REQUIRED)
 
@@ -20,6 +34,7 @@ add_b3d_renderer(
 		NanoRenderer.h
 	LIBRARIES
 		nano-ptx
+		nano-optixir
 		OpenVDB::nanovdb
 		imgui::imgui
 		NanoCutterParser
