Add new renderer, mirrored from NanoRenderer

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(null)
  add_subdirectory(fastVoxelTraversal)
 add_subdirectory(cudaSurfaceObjectWriteTest)
 add_subdirectory(nano)
+add_subdirectory(nanoOutOfCore)
 add_subdirectory(samples)
 add_subdirectory(simpleTriangles)
