--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -41,6 +41,7 @@ target_link_libraries(viewer
 	B3D::Renderer::SimpleTriangles
 	B3D::Renderer::Nano
 	B3D::Renderer::FastVoxelTraversal
+	B3D::Renderer::NanoOutOfCore
 	OpenGL::GL
 	glad::glad
 	Vulkan::Vulkan
