Linear Buffer working with GUI-Viewer

--- a/renderer/samples/simpleTriangles/CMakeLists.txt
+++ b/renderer/samples/simpleTriangles/CMakeLists.txt
@@ -6,6 +6,7 @@ embed_ptx(
     "SimpleTriangles-ptx"
   PTX_LINK_LIBRARIES
     owl::owl
+	B3D::Renderer::Library
   SOURCES
     SimpleTrianglesDeviceCode.cu
 )
