Add experimental curve editor

--- a/renderer/nanoOutOfCore/CMakeLists.txt
+++ b/renderer/nanoOutOfCore/CMakeLists.txt
@@ -42,6 +42,7 @@ add_b3d_renderer(
 	HEADERS
 		NanoOutOfCoreRenderer.h
 		OpenFileDialog.h
+		Curve.h
 	LIBRARIES
 		nanoOutOfCore-ptx
 		nanoOutOfCore-optixir
