--- a/unityCUDAInterop/actions/actionSimpleTriangles/CMakeLists.txt
+++ b/unityCUDAInterop/actions/actionSimpleTriangles/CMakeLists.txt
@@ -16,4 +16,6 @@ set_target_properties(${MODULE_NAME} PROPERTIES CXX_STANDARD 20)
 
 set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "UnityCudaInterop/Actions")
 
+target_compile_definitions(${MODULE_NAME} PUBLIC STB_IMAGE_IMPLEMENTATION)
+
 install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTION_SAMPLES}/${MODULE_NAME})
