Add render feature system and decompose some render code into reusable renderer features components

--- a/renderer/lib/CMakeLists.txt
+++ b/renderer/lib/CMakeLists.txt
@@ -16,6 +16,13 @@ set(SHARED_HEADERS
 	CudaGpuTimers.h
 	OwlExtensions.h
 	SharedStructs.h
+	RenderFeature.h
+	features/ColorMapFeature.h
+	features/ColorMapFeature.cpp
+	features/TransferFunctionFeature.h
+	features/TransferFunctionFeature.cpp
+	Curve.h
+	Curve.cpp
 )
 
 add_library(${MODULE_NAME} ${SRC} ${SHARED_HEADERS})
