WIP: Foveated Rendering Feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,10 +47,13 @@ function(add_b3d_renderer)
 			B3D::Renderer::Library
 			"${TARGET_LIBRARIES}"
 	)
-	set_property(TARGET ${MODULE_NAME} PROPERTY CUDA_STANDARD 20)
+	set_target_properties(${MODULE_NAME}
+	PROPERTIES
+	CUDA_STANDARD 20
+	FOLDER "Renderer"
+	)
 
 	add_library(B3D::Renderer::${MODULE_NAME} ALIAS ${MODULE_NAME})
-	set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Renderer")
 endfunction()
 
 
