--- a/renderer/nano/CMakeLists.txt
+++ b/renderer/nano/CMakeLists.txt
@@ -44,8 +44,10 @@ add_b3d_renderer(
 		Nano
 	SOURCES
 		NanoRenderer.cpp
+		RuntimeDataSet.cpp
 	HEADERS
 		NanoRenderer.h
+		RuntimeDataSet.h
 	LIBRARIES
 		nano-ptx
 		nano-optixir
