--- a/renderer/lib/CMakeLists.txt
+++ b/renderer/lib/CMakeLists.txt
@@ -31,12 +31,14 @@ set(SHARED_HEADERS
 	Curve.cpp
 )
 
+find_package(imgui CONFIG REQUIRED)
 add_library(${MODULE_NAME} ${SRC} ${SHARED_HEADERS})
 target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_features(${MODULE_NAME} PUBLIC cxx_std_20)
 target_link_libraries(${MODULE_NAME}
   PUBLIC
 	owl::owl
+	imgui::imgui
 )
 add_library(B3D::Renderer::Library ALIAS ${MODULE_NAME})
 
