--- a/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
+++ b/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(OpenVDB CONFIG REQUIRED COMPONENTS openvdb nanovdb)
 add_executable(NanoCutter)
 target_sources(NanoCutter PRIVATE
 	main.cpp
-	NanoCutterApi.h
 	FitsHelper.h
 	Common.h
 	FitsHelper.cpp
@@ -24,3 +23,16 @@ endif()
 
 
 set_property(TARGET NanoCutter PROPERTY FOLDER "Tools")
+
+
+
+
+add_library(NanoCutApi)
+target_sources(NanoCutApi PRIVATE NanoCutApi.cpp)
+target_link_libraries(NanoCutApi PRIVATE cfitsio OpenVDB::openvdb OpenVDB::nanovdb)
+target_compile_features(NanoCutApi PUBLIC cxx_std_20)
+target_include_directories(NanoCutApi PUBLIC /include)
+
+if(MSVC)
+	target_compile_options(NanoCutApi PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
+endif()
