--- a/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
+++ b/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
@@ -27,12 +27,34 @@ set_property(TARGET NanoCutter PROPERTY FOLDER "Tools")
 
 
 
-add_library(NanoCutApi)
-target_sources(NanoCutApi PRIVATE NanoCutApi.cpp)
-target_link_libraries(NanoCutApi PRIVATE cfitsio OpenVDB::openvdb OpenVDB::nanovdb)
+add_library(NanoCutApi STATIC)
+target_sources(NanoCutApi PRIVATE
+	NanoCutApi.cpp
+	Common.h
+	FitsHelper.cpp
+	NanoGenerator.cpp
+)
+target_link_libraries(NanoCutApi PUBLIC cfitsio OpenVDB::openvdb OpenVDB::nanovdb)
 target_compile_features(NanoCutApi PUBLIC cxx_std_20)
 target_include_directories(NanoCutApi PUBLIC /include)
 
 if(MSVC)
 	target_compile_options(NanoCutApi PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
 endif()
+
+
+find_package(Catch2 REQUIRED)
+add_executable(NanoCutApi_Tests)
+target_sources(NanoCutApi_Tests
+PRIVATE
+	NanoCutApi_Tests.cpp
+)
+
+target_link_libraries(NanoCutApi_Tests PUBLIC NanoCutApi Catch2::Catch2 Catch2::Catch2WithMain)
+target_compile_features(NanoCutApi_Tests PUBLIC cxx_std_20)
+set_property(TARGET NanoCutApi_Tests PROPERTY
+             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
+include(CTest)
+include(Catch)
+catch_discover_tests(NanoCutApi_Tests)
