Extends test and add benchmark

--- a/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
+++ b/tools/fitsCutterNanoVdbConverter/CMakeLists.txt
@@ -27,7 +27,7 @@ set_property(TARGET NanoCutter PROPERTY FOLDER "Tools")
 
 
 
-add_library(NanoCutApi STATIC)
+add_library(NanoCutApi SHARED)
 target_sources(NanoCutApi PRIVATE
 	NanoCutApi.cpp
 	Common.h
@@ -48,9 +48,11 @@ add_executable(NanoCutApi_Tests)
 target_sources(NanoCutApi_Tests
 PRIVATE
 	NanoCutApi_Tests.cpp
+	FitsHelper.cpp
+	NanoGenerator.cpp
 )
 
-target_link_libraries(NanoCutApi_Tests PUBLIC NanoCutApi Catch2::Catch2 Catch2::Catch2WithMain)
+target_link_libraries(NanoCutApi_Tests PUBLIC NanoCutApi Catch2::Catch2 Catch2::Catch2WithMain cfitsio OpenVDB::openvdb OpenVDB::nanovdb)
 target_compile_features(NanoCutApi_Tests PUBLIC cxx_std_20)
 set_property(TARGET NanoCutApi_Tests PROPERTY
              MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
