--- a/unityCUDAInterop/UnityPlayground/Packages/manifest.json
+++ b/unityCUDAInterop/UnityPlayground/Packages/manifest.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "com.meta.xr.sdk.all": "62.0.0",
     "com.unity.ext.nunit": "2.0.5",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.xr.management": "4.4.1",
     "com.unity.xr.mock-hmd": "1.3.1-preview.1",
-    "com.unity.xr.oculus": "4.1.2",
+    "com.unity.xr.oculus": "4.2.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
