--- a/unityCUDAInterop/actions/CmakeLists.txt
+++ b/unityCUDAInterop/actions/CmakeLists.txt
@@ -1,3 +1,5 @@
 # add_subdirectory(actionSyncPrimitiveSample)
 add_subdirectory(actionSimpleTriangles)
 add_subdirectory(actionNanoRenderer)
+add_subdirectory(actionNativeTexture)
+#add_subdirectory(actionSyncPrimitiveSample)
