Move owl CMake setting into its own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,8 @@ project(b3d_visualisation
     VERSION 0.1
     LANGUAGES CXX C CUDA
 )
-#set(Boost_NO_WARN_NEW_VERSIONS 1)
-#set(VCPKG_LOAD_VCVARS_ENV OFF)
+
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-
-#it a hack, otherwise it will be included by owl package with wrong settings
-find_package(glfw3 CONFIG REQUIRED)
-find_package(CUDAToolkit)
-
-#TODO: move owl stuff to its own cmakelists file
-set(owl_dir ${PROJECT_SOURCE_DIR}/thirdParty/owl)
-OPTION(OWL_BUILD_SAMPLES OFF)
-add_subdirectory(${owl_dir} EXCLUDE_FROM_ALL)
-add_subdirectory(${owl_dir}/samples/common)
-
 
 function(add_b3d_renderer)
 
@@ -56,13 +44,8 @@ function(add_b3d_renderer)
 	add_library(B3D::Renderer::${MODULE_NAME} ALIAS ${MODULE_NAME})
 endfunction()
 
-
+add_subdirectory(${PROJECT_SOURCE_DIR}/thirdParty)
 add_subdirectory(renderer)
 add_subdirectory(viewer)
 add_subdirectory(unityCUDAInterop)
 add_subdirectory(tools)
-
-
-
-set_property(TARGET owl PROPERTY FOLDER "ThirdParty/owl")
-set_property(TARGET owl_viewer PROPERTY FOLDER "ThirdParty/owl")
