Add open file dialog for loading nvdb files. Remove hardcoded paths. Add dummy volume on startup

--- a/renderer/nano/CMakeLists.txt
+++ b/renderer/nano/CMakeLists.txt
@@ -65,9 +65,11 @@ add_b3d_renderer(
 	SOURCES
 		NanoRenderer.cpp
 		RuntimeDataSet.cpp
+		../nanoOutOfCore/OpenFileDialog.cpp
 	HEADERS
 		NanoRenderer.h
 		RuntimeDataSet.h
+		../nanoOutOfCore/OpenFileDialog.h
 	LIBRARIES
 		cudaCode
 		nano-ptx
