Starting http rest server

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(fitsCutterNanoVdbConverter)
 add_subdirectory(nanoCutterParser)
 add_subdirectory(colorMap)
+add_subdirectory(sofia_rest_server)
