Update git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "thirdParty/owl"]
 	path = thirdParty/owl
 	url = https://github.com/AntonK47/owl.git
-	branch = fix_user_type_variable
+	branch = dev
