--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,5 +47,8 @@ endfunction()
 add_subdirectory(${PROJECT_SOURCE_DIR}/thirdParty)
 add_subdirectory(renderer)
 add_subdirectory(viewer)
-add_subdirectory(unityCUDAInterop)
 add_subdirectory(tools)
+
+if(INCLUDE_UNITY_CUDA_INTEROP)
+	add_subdirectory(unityCUDAInterop)
+endif()
